<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">耐心球</string>
	<string name="resume">恢复</string>
	<string name="restart">重新</string>
	<string name="quit">退出</string>
	<string name="about">关于</string>
	<string name="highscore">高分</string>
	<string name="anonymous">匿名</string>
	<string name="tips_high_score">恭喜您创造了一个高分，请输入大名</string>
	<string name="info_email">邮件</string>
	<string name="info_author">作者</string>
	<string name="info_weibo">微博</string>
	<string name="info_game">游戏玩法：使用重力感应控制全部小球都到洞中。游戏采用Box2d物理引擎的算法模拟小球之间的碰撞和堆叠。详细信息，请访问：
	</string>
	<string name="info_project_home">code.google.com/p/android-ball-world
	</string>
</resources>
